fixed no onLand in TranspportCell class